// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReactNative flex shorthand 1`] = `
<div
  style={
    Object {
      "flex": 1,
    }
  }
/>
`;

exports[`ReactNative flex shorthand 2`] = `
<div
  style={
    Object {
      "flex": 1,
      "flexShrink": 2,
    }
  }
/>
`;

exports[`ReactNative flex shorthand 3`] = `
<div
  style={
    Object {
      "flex": 1,
      "flexBasis": "3px",
      "flexShrink": 2,
    }
  }
/>
`;

exports[`ReactNative flex shorthand 4`] = `
<div
  style={
    Object {
      "flex": 3,
      "flexBasis": "1px",
      "flexShrink": 2,
    }
  }
/>
`;

exports[`ReactNative render 1`] = `
<div
  style={
    Object {
      "marginBottom": 24,
      "marginLeft": 24,
      "marginRight": 24,
      "marginTop": 24,
    }
  }
/>
`;

exports[`as 1`] = `null`;

exports[`as 2`] = `
Object {
  "someCustomProp": "1",
  "style": Object {
    "display": "flex",
    "flexDirection": "column",
    "position": "relative",
  },
}
`;

exports[`backgroundColor 1`] = `
<div
  style={
    Object {
      "backgroundColor": "blue",
      "display": "flex",
      "flexDirection": "column",
      "position": "relative",
    }
  }
/>
`;

exports[`border color shorthand 1`] = `
<div
  style={
    Object {
      "borderBottomColor": "blue",
      "borderLeftColor": "blue",
      "borderRightColor": "blue",
      "borderTopColor": "blue",
      "display": "flex",
      "flexDirection": "column",
      "position": "relative",
    }
  }
/>
`;

exports[`border color shorthand 2`] = `
<div
  style={
    Object {
      "borderBottomColor": "green",
      "display": "flex",
      "flexDirection": "column",
      "position": "relative",
    }
  }
/>
`;

exports[`border color shorthand 3`] = `
<div
  style={
    Object {
      "borderBottomColor": "green",
      "borderLeftColor": "blue",
      "borderRightColor": "blue",
      "borderTopColor": "blue",
      "display": "flex",
      "flexDirection": "column",
      "position": "relative",
    }
  }
/>
`;

exports[`border radius shorthand 1`] = `
<div
  style={
    Object {
      "borderBottomLeftRadius": 1,
      "borderBottomRightRadius": 1,
      "borderTopLeftRadius": 1,
      "borderTopRightRadius": 1,
      "display": "flex",
      "flexDirection": "column",
      "position": "relative",
    }
  }
/>
`;

exports[`border radius shorthand 2`] = `
<div
  style={
    Object {
      "borderBottomLeftRadius": 2,
      "display": "flex",
      "flexDirection": "column",
      "position": "relative",
    }
  }
/>
`;

exports[`border radius shorthand 3`] = `
<div
  style={
    Object {
      "borderBottomLeftRadius": 2,
      "borderBottomRightRadius": 1,
      "borderTopLeftRadius": 1,
      "borderTopRightRadius": 1,
      "display": "flex",
      "flexDirection": "column",
      "position": "relative",
    }
  }
/>
`;

exports[`border width 1`] = `
<div
  style={
    Object {
      "borderBottomWidth": 1,
      "borderLeftWidth": 1,
      "borderRightWidth": 1,
      "borderTopWidth": 1,
      "display": "flex",
      "flexDirection": "column",
      "position": "relative",
    }
  }
/>
`;

exports[`border width 2`] = `
<div
  style={
    Object {
      "borderBottomWidth": 1,
      "display": "flex",
      "flexDirection": "column",
      "position": "relative",
    }
  }
/>
`;

exports[`border width 3`] = `
<div
  style={
    Object {
      "borderBottomWidth": 2,
      "borderLeftWidth": 1,
      "borderRightWidth": 1,
      "borderTopWidth": 1,
      "display": "flex",
      "flexDirection": "column",
      "position": "relative",
    }
  }
/>
`;

exports[`ensure rhythm via padding compensation 1`] = `
<div
  style={
    Object {
      "borderBottomWidth": 1,
      "borderLeftWidth": 1,
      "borderRightWidth": 1,
      "borderTopWidth": 1,
      "display": "flex",
      "flexDirection": "column",
      "paddingBottom": 23,
      "paddingLeft": 23,
      "paddingRight": 23,
      "paddingTop": 23,
      "position": "relative",
    }
  }
/>
`;

exports[`ensure rhythm via padding compensation 2`] = `
<div
  style={
    Object {
      "borderTopWidth": 1,
      "display": "flex",
      "flexDirection": "column",
      "paddingTop": 23,
      "position": "relative",
    }
  }
/>
`;

exports[`ensure rhythm via padding compensation 3`] = `
<div
  style={
    Object {
      "borderTopWidth": 25,
      "display": "flex",
      "flexDirection": "column",
      "paddingTop": 24,
      "position": "relative",
    }
  }
/>
`;

exports[`ensure rhythm via padding compensation 4`] = `
<div
  style={
    Object {
      "borderLeftWidth": 1,
      "display": "flex",
      "flexDirection": "column",
      "paddingLeft": 23,
      "position": "relative",
    }
  }
/>
`;

exports[`ensure rhythm via padding compensation 5`] = `
<div
  style={
    Object {
      "borderLeftWidth": 25,
      "display": "flex",
      "flexDirection": "column",
      "paddingLeft": 24,
      "position": "relative",
    }
  }
/>
`;

exports[`flex shorthand 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexBasis": "auto",
      "flexDirection": "column",
      "flexGrow": 1,
      "flexShrink": 1,
      "position": "relative",
    }
  }
/>
`;

exports[`flex shorthand 2`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexBasis": "auto",
      "flexDirection": "column",
      "flexGrow": 1,
      "flexShrink": 2,
      "position": "relative",
    }
  }
/>
`;

exports[`flex shorthand 3`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexBasis": "3px",
      "flexDirection": "column",
      "flexGrow": 1,
      "flexShrink": 2,
      "position": "relative",
    }
  }
/>
`;

exports[`flex shorthand 4`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexBasis": "1px",
      "flexDirection": "column",
      "flexGrow": 3,
      "flexShrink": 2,
      "position": "relative",
    }
  }
/>
`;

exports[`just value style props 1`] = `
<div
  style={
    Object {
      "alignItems": "foo",
      "display": "flex",
      "flexDirection": "column",
      "position": "relative",
    }
  }
/>
`;

exports[`just value style props 2`] = `
<div
  style={
    Object {
      "alignSelf": "foo",
      "display": "flex",
      "flexDirection": "column",
      "position": "relative",
    }
  }
/>
`;

exports[`just value style props 3`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexBasis": "foo",
      "flexDirection": "column",
      "position": "relative",
    }
  }
/>
`;

exports[`just value style props 4`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "foo",
      "position": "relative",
    }
  }
/>
`;

exports[`just value style props 5`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "flexGrow": "foo",
      "position": "relative",
    }
  }
/>
`;

exports[`just value style props 6`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "flexShrink": "foo",
      "position": "relative",
    }
  }
/>
`;

exports[`just value style props 7`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "flexWrap": "foo",
      "position": "relative",
    }
  }
/>
`;

exports[`just value style props 8`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "justifyContent": "foo",
      "position": "relative",
    }
  }
/>
`;

exports[`just value style props 9`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "opacity": "foo",
      "position": "relative",
    }
  }
/>
`;

exports[`just value style props 10`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "overflow": "foo",
      "position": "relative",
    }
  }
/>
`;

exports[`just value style props 11`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "position": "foo",
    }
  }
/>
`;

exports[`just value style props 12`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "position": "relative",
      "zIndex": "foo",
    }
  }
/>
`;

exports[`just value style props 13`] = `
<div
  style={
    Object {
      "borderStyle": "foo",
      "display": "flex",
      "flexDirection": "column",
      "position": "relative",
    }
  }
/>
`;

exports[`margin bottom left right top 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "marginBottom": 24,
      "marginLeft": 48,
      "marginRight": 72,
      "marginTop": 96,
      "position": "relative",
    }
  }
/>
`;

exports[`margin explicit 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "marginBottom": "auto",
      "marginLeft": "auto",
      "marginRight": "auto",
      "marginTop": "auto",
      "position": "relative",
    }
  }
/>
`;

exports[`margin rhythm 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "marginBottom": 24,
      "marginLeft": 24,
      "marginRight": 24,
      "marginTop": 24,
      "position": "relative",
    }
  }
/>
`;

exports[`margin shorthands are order independent 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "marginBottom": 72,
      "marginLeft": 24,
      "marginRight": 24,
      "marginTop": 48,
      "position": "relative",
    }
  }
/>
`;

exports[`margin shorthands are order independent 2`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "marginBottom": 72,
      "marginLeft": 24,
      "marginRight": 24,
      "marginTop": 48,
      "position": "relative",
    }
  }
/>
`;

exports[`margin shorthands are order independent 3`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "marginBottom": 72,
      "marginLeft": 24,
      "marginRight": 24,
      "marginTop": 48,
      "position": "relative",
    }
  }
/>
`;

exports[`margin shorthands are order independent 4`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "marginBottom": 72,
      "marginLeft": 24,
      "marginRight": 24,
      "marginTop": 48,
      "position": "relative",
    }
  }
/>
`;

exports[`margin shorthands are order independent 5`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "marginBottom": 72,
      "marginLeft": 24,
      "marginRight": 24,
      "marginTop": 48,
      "position": "relative",
    }
  }
/>
`;

exports[`margin shorthands are order independent 6`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "marginBottom": 72,
      "marginLeft": 24,
      "marginRight": 24,
      "marginTop": 48,
      "position": "relative",
    }
  }
/>
`;

exports[`margin shorthands are order independent 7`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "marginBottom": 24,
      "marginLeft": 48,
      "marginRight": 24,
      "marginTop": 24,
      "position": "relative",
    }
  }
/>
`;

exports[`margin shorthands are order independent 8`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "marginBottom": 24,
      "marginLeft": 48,
      "marginRight": 24,
      "marginTop": 24,
      "position": "relative",
    }
  }
/>
`;

exports[`marginHorizontal 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "marginLeft": 24,
      "marginRight": 24,
      "position": "relative",
    }
  }
/>
`;

exports[`marginLeft overriden by style marginLeft 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "marginLeft": 2,
      "position": "relative",
    }
  }
/>
`;

exports[`marginLeft rhythm 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "marginLeft": 24,
      "position": "relative",
    }
  }
/>
`;

exports[`marginVertical 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "marginBottom": 24,
      "marginTop": 24,
      "position": "relative",
    }
  }
/>
`;

exports[`other maybe rhythm props 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "height": 24,
      "position": "relative",
    }
  }
/>
`;

exports[`other maybe rhythm props 2`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "height": "1%",
      "position": "relative",
    }
  }
/>
`;

exports[`other maybe rhythm props 3`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "maxHeight": 24,
      "position": "relative",
    }
  }
/>
`;

exports[`other maybe rhythm props 4`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "maxHeight": "1%",
      "position": "relative",
    }
  }
/>
`;

exports[`other maybe rhythm props 5`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "maxWidth": 24,
      "position": "relative",
    }
  }
/>
`;

exports[`other maybe rhythm props 6`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "maxWidth": "1%",
      "position": "relative",
    }
  }
/>
`;

exports[`other maybe rhythm props 7`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "minHeight": 24,
      "position": "relative",
    }
  }
/>
`;

exports[`other maybe rhythm props 8`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "minHeight": "1%",
      "position": "relative",
    }
  }
/>
`;

exports[`other maybe rhythm props 9`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "minWidth": 24,
      "position": "relative",
    }
  }
/>
`;

exports[`other maybe rhythm props 10`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "minWidth": "1%",
      "position": "relative",
    }
  }
/>
`;

exports[`other maybe rhythm props 11`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "position": "relative",
      "width": 24,
    }
  }
/>
`;

exports[`other maybe rhythm props 12`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "position": "relative",
      "width": "1%",
    }
  }
/>
`;

exports[`other maybe rhythm props 13`] = `
<div
  style={
    Object {
      "bottom": 24,
      "display": "flex",
      "flexDirection": "column",
      "position": "relative",
    }
  }
/>
`;

exports[`other maybe rhythm props 14`] = `
<div
  style={
    Object {
      "bottom": "1%",
      "display": "flex",
      "flexDirection": "column",
      "position": "relative",
    }
  }
/>
`;

exports[`other maybe rhythm props 15`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "left": 24,
      "position": "relative",
    }
  }
/>
`;

exports[`other maybe rhythm props 16`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "left": "1%",
      "position": "relative",
    }
  }
/>
`;

exports[`other maybe rhythm props 17`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "position": "relative",
      "right": 24,
    }
  }
/>
`;

exports[`other maybe rhythm props 18`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "position": "relative",
      "right": "1%",
    }
  }
/>
`;

exports[`other maybe rhythm props 19`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "position": "relative",
      "top": 24,
    }
  }
/>
`;

exports[`other maybe rhythm props 20`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "position": "relative",
      "top": "1%",
    }
  }
/>
`;

exports[`padding 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "paddingBottom": 24,
      "paddingLeft": 24,
      "paddingRight": 24,
      "paddingTop": 24,
      "position": "relative",
    }
  }
/>
`;

exports[`render 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "position": "relative",
    }
  }
/>
`;

exports[`render with children 1`] = `
<div
  style={
    Object {
      "display": "flex",
      "flexDirection": "column",
      "position": "relative",
    }
  }
>
  <div>
    div
  </div>
</div>
`;

exports[`style 1`] = `
<div
  style={
    Object {
      "backgroundColor": "red",
      "display": "flex",
      "flexDirection": "column",
      "position": "relative",
    }
  }
/>
`;

exports[`style ignores undefined values 1`] = `
<div
  style={
    Object {
      "display": undefined,
      "flexDirection": undefined,
      "position": undefined,
    }
  }
/>
`;
